наши первые изменения

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <p>Git + GitHub</p>
+  <h2>Hello</h2>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, quibusdam doloremque distinctio quam odit nobis unde nisi architecto fugiat ad.</p>
 </body>
 </html>
