--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <p>Git + GitHub</p>
   <h2>Hello</h2>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, quibusdam doloremque distinctio quam odit nobis unde nisi architecto fugiat ad.</p>
+  <p>Git + GitHub</p>
+  <h2>Hello</h2>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, quibusdam doloremque distinctio quam odit nobis unde nisi architecto fugiat ad.</p>
 </body>
 </html>
